# IMUErrorCalibration

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: AccelCalibrationCalculator.h  ErrorCompensation.h  GyroCalibrationCalculatorA.h  GyroCalibrationCalculatorB.h  IMUDataReader.h  Plotter.h
src/: AccelCalibrationCalculator.cpp  CMakeLists.txt  ErrorCompensation.cpp  GyroCalibrationCalculatorA.cpp  GyroCalibrationCalculatorB.cpp  IMUDataReader.cpp  Plotter.cpp
